--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,18 @@
           <h2>All Games</h2>
           <div class="tools">
             <input id="searchInput" class="input" placeholder="Search team/opponent..." />
+
             <select id="filterResult" class="input">
               <option value="ALL">All Results</option>
               <option value="W">Wins</option>
               <option value="L">Losses</option>
+            </select>
+
+            <!-- PAGE SIZE DROPDOWN -->
+            <select id="pageSizeSelect" class="input">
+              <option value="10">10 per page</option>
+              <option value="20">20 per page</option>
+              <option value="50">50 per page</option>
             </select>
           </div>
         </div>
