--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,189 +1,133 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>College Football Game Tracker (Cloud)</title>
+  <title>College Football Game Tracker</title>
+
   <link rel="stylesheet" href="styles.css" />
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+    }
+
+    header {
+      background: #1f3c88;
+      color: white;
+      padding: 15px;
+      font-size: 22px;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 30px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
+    }
+
+    th {
+      background: #eee;
+    }
+
+    img {
+      height: 40px;
+    }
+
+    button {
+      padding: 5px 10px;
+      margin: 2px;
+      cursor: pointer;
+    }
+
+    .controls {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    form input {
+      margin: 5px;
+    }
+  </style>
 </head>
+
 <body>
-  <header class="header">
-    <div>
-      <h1>🏈 College Football Game Tracker</h1>
-      <p class="subtitle">Cloud Collection Manager (Client/Server + JSON)</p>
-    </div>
-  </header>
 
-  <nav class="tabs" aria-label="Views">
-    <button class="tab active" data-view="listView">List</button>
-    <button class="tab" data-view="formView" id="newGameTab">Add / Edit</button>
-    <button class="tab" data-view="statsView">Stats</button>
-  </nav>
+<header>
+  College Football Game Tracker
+</header>
 
-  <main class="container">
-    <!-- LIST VIEW -->
-    <section id="listView" class="view active">
-      <div class="card">
-        <div class="card-header">
-          <h2>All Games</h2>
-          <div class="tools">
-            <input id="searchInput" class="input" placeholder="Search team/opponent..." />
+<div class="container">
 
-            <select id="filterResult" class="input">
-              <option value="ALL">All Results</option>
-              <option value="W">Wins</option>
-              <option value="L">Losses</option>
-            </select>
+  <h2>All Games</h2>
 
-            <!-- PAGE SIZE DROPDOWN -->
-            <select id="pageSizeSelect" class="input">
-              <option value="10">10 per page</option>
-              <option value="20">20 per page</option>
-              <option value="50">50 per page</option>
-            </select>
-          </div>
-        </div>
+  <div class="controls">
+    <input id="search" placeholder="Search team/opponent">
 
-        <div class="table-wrap">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Week</th>
-                <th>Team</th>
-                <th>Opponent</th>
-                <th>H/A</th>
-                <th>PF</th>
-                <th>PA</th>
-                <th>Result</th>
-                <th class="right">Actions</th>
-              </tr>
-            </thead>
-            <tbody id="gamesTbody"></tbody>
-          </table>
-        </div>
+    <select id="pageSize">
+      <option value="10">10 per page</option>
+      <option value="20">20 per page</option>
+      <option value="50">50 per page</option>
+    </select>
 
-        <div class="footer-row">
-          <div class="paging">
-            <button class="btn btn-ghost" id="prevPageBtn">Prev</button>
-            <span class="muted" id="pageLabel">Page 1</span>
-            <button class="btn btn-ghost" id="nextPageBtn">Next</button>
-          </div>
-          <span id="countLabel" class="muted"></span>
-        </div>
+    <button id="prev">Prev</button>
+    <button id="next">Next</button>
+  </div>
 
-        <div id="listMsg" class="msg" role="status" aria-live="polite"></div>
-      </div>
-    </section>
+  <table>
+    <thead>
+      <tr>
+        <th>Week</th>
+        <th>Team</th>
+        <th>Opponent</th>
+        <th>PF</th>
+        <th>PA</th>
+        <th>Result</th>
+        <th>Logo</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
 
-    <!-- FORM VIEW -->
-    <section id="formView" class="view">
-      <div class="card">
-        <div class="card-header">
-          <h2 id="formTitle">Add Game</h2>
-          <p class="muted" id="formHint">Fill out the fields and click Save.</p>
-        </div>
+    <tbody id="gamesBody"></tbody>
+  </table>
 
-        <form id="gameForm" novalidate>
-          <input type="hidden" id="gameId" />
+  <hr>
 
-          <div class="grid">
-            <div class="field">
-              <label for="team">Team *</label>
-              <input id="team" class="input" type="text" maxlength="60" required placeholder="Clemson" />
-              <small class="error" id="teamErr"></small>
-            </div>
+  <h3>Add / Edit Game</h3>
 
-            <div class="field">
-              <label for="opponent">Opponent *</label>
-              <input id="opponent" class="input" type="text" maxlength="60" required placeholder="Florida State" />
-              <small class="error" id="opponentErr"></small>
-            </div>
+  <form id="gameForm">
 
-            <div class="field">
-              <label for="homeAway">Home/Away *</label>
-              <select id="homeAway" class="input" required>
-                <option value="">Select…</option>
-                <option value="Home">Home</option>
-                <option value="Away">Away</option>
-              </select>
-              <small class="error" id="homeAwayErr"></small>
-            </div>
+    <input type="hidden" id="gameId">
 
-            <div class="field">
-              <label for="week">Week *</label>
-              <input id="week" class="input" type="number" min="1" max="20" required placeholder="1" />
-              <small class="error" id="weekErr"></small>
-            </div>
+    <input id="week" placeholder="Week" required>
+    <input id="team" placeholder="Team" required>
+    <input id="opponent" placeholder="Opponent" required>
+    <input id="pointsfor" placeholder="Points For" required>
+    <input id="pointsagainst" placeholder="Points Against" required>
+    <input id="result" placeholder="Result" required>
+    <input id="imageurl" placeholder="Image URL" required>
 
-            <div class="field">
-              <label for="pointsFor">Points Scored (PF) *</label>
-              <input id="pointsFor" class="input" type="number" min="0" max="100" required placeholder="34" />
-              <small class="error" id="pointsForErr"></small>
-            </div>
+    <br><br>
 
-            <div class="field">
-              <label for="pointsAgainst">Points Allowed (PA) *</label>
-              <input id="pointsAgainst" class="input" type="number" min="0" max="100" required placeholder="24" />
-              <small class="error" id="pointsAgainstErr"></small>
-            </div>
+    <button type="submit">Save</button>
+  </form>
 
-            <div class="field">
-              <label for="result">Result *</label>
-              <select id="result" class="input" required>
-                <option value="">Select…</option>
-                <option value="W">Win (W)</option>
-                <option value="L">Loss (L)</option>
-              </select>
-              <small class="error" id="resultErr"></small>
-            </div>
-          </div>
+</div>
 
-          <div class="actions">
-            <button type="submit" class="btn btn-primary" id="saveBtn">Save Game</button>
-            <button type="button" class="btn btn-ghost" id="cancelBtn">Cancel</button>
-          </div>
+<script src="app.js"></script>
 
-          <div id="formMsg" class="msg" role="status" aria-live="polite"></div>
-        </form>
-      </div>
-    </section>
-
-    <!-- STATS VIEW -->
-    <section id="statsView" class="view">
-      <div class="card">
-        <div class="card-header">
-          <h2>Stats</h2>
-          <p class="muted">Pulled from server JSON.</p>
-        </div>
-
-        <div class="stats-grid">
-          <div class="stat">
-            <div class="stat-label">Total Games</div>
-            <div class="stat-value" id="statTotalGames">0</div>
-          </div>
-
-          <div class="stat">
-            <div class="stat-label">Wins / Losses</div>
-            <div class="stat-value" id="statWL">0 / 0</div>
-          </div>
-
-          <div class="stat">
-            <div class="stat-label">Average PF</div>
-            <div class="stat-value" id="statAvgPF">0.0</div>
-          </div>
-
-          <div class="stat">
-            <div class="stat-label">Highest PF Game</div>
-            <div class="stat-value" id="statHighPF">—</div>
-            <div class="muted" id="statHighPFDetail"></div>
-          </div>
-        </div>
-
-        <div id="statsMsg" class="msg" role="status" aria-live="polite"></div>
-      </div>
-    </section>
-  </main>
-
-  <script src="app.js"></script>
 </body>
 </html>
