--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,67 +1,181 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>College Football Tracker</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>College Football Game Tracker (Cloud)</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
+  <header class="header">
+    <div>
+      <h1>🏈 College Football Game Tracker</h1>
+      <p class="subtitle">Cloud Collection Manager (Client/Server + JSON)</p>
+    </div>
+  </header>
 
-<header>
-<h1>🏈 College Football Tracker</h1>
-<div class="tabs">
-<button id="gamesTab">Games</button>
-<button id="statsTab">Stats</button>
-</div>
-</header>
+  <nav class="tabs" aria-label="Views">
+    <button class="tab active" data-view="listView">List</button>
+    <button class="tab" data-view="formView" id="newGameTab">Add / Edit</button>
+    <button class="tab" data-view="statsView">Stats</button>
+  </nav>
 
-<div class="controls">
-<input id="search" placeholder="Search team...">
+  <main class="container">
+    <!-- LIST VIEW -->
+    <section id="listView" class="view active">
+      <div class="card">
+        <div class="card-header">
+          <h2>All Games</h2>
+          <div class="tools">
+            <input id="searchInput" class="input" placeholder="Search team/opponent..." />
+            <select id="filterResult" class="input">
+              <option value="ALL">All Results</option>
+              <option value="W">Wins</option>
+              <option value="L">Losses</option>
+            </select>
+          </div>
+        </div>
 
-<select id="pageSize">
-<option>5</option>
-<option selected>10</option>
-<option>20</option>
-<option>50</option>
-</select>
+        <div class="table-wrap">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Week</th>
+                <th>Team</th>
+                <th>Opponent</th>
+                <th>H/A</th>
+                <th>PF</th>
+                <th>PA</th>
+                <th>Result</th>
+                <th class="right">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="gamesTbody"></tbody>
+          </table>
+        </div>
 
-<select id="sort">
-<option value="week">Week</option>
-<option value="team">Team</option>
-</select>
-</div>
+        <div class="footer-row">
+          <div class="paging">
+            <button class="btn btn-ghost" id="prevPageBtn">Prev</button>
+            <span class="muted" id="pageLabel">Page 1</span>
+            <button class="btn btn-ghost" id="nextPageBtn">Next</button>
+          </div>
+          <span id="countLabel" class="muted"></span>
+        </div>
 
-<div id="gamesView">
+        <div id="listMsg" class="msg" role="status" aria-live="polite"></div>
+      </div>
+    </section>
 
-<h2>Add / Edit Game</h2>
+    <!-- FORM VIEW -->
+    <section id="formView" class="view">
+      <div class="card">
+        <div class="card-header">
+          <h2 id="formTitle">Add Game</h2>
+          <p class="muted" id="formHint">Fill out the fields and click Save.</p>
+        </div>
 
-<form id="form" class="form-grid">
-<input id="team" placeholder="Team" required>
-<input id="opponent" placeholder="Opponent" required>
-<input id="week" type="number" placeholder="Week" required>
-<input id="teamScore" type="number" placeholder="Team Score" required>
-<input id="oppScore" type="number" placeholder="Opponent Score" required>
-<input id="imageUrl" placeholder="Image URL">
+        <form id="gameForm" novalidate>
+          <input type="hidden" id="gameId" />
 
-<button type="submit">Save Game</button>
-</form>
+          <div class="grid">
+            <div class="field">
+              <label for="team">Team *</label>
+              <input id="team" class="input" type="text" maxlength="60" required placeholder="Clemson" />
+              <small class="error" id="teamErr"></small>
+            </div>
 
-<div id="games" class="grid"></div>
+            <div class="field">
+              <label for="opponent">Opponent *</label>
+              <input id="opponent" class="input" type="text" maxlength="60" required placeholder="Florida State" />
+              <small class="error" id="opponentErr"></small>
+            </div>
 
-<div class="pager">
-<button id="prev">Prev</button>
-<span id="page"></span>
-<button id="next">Next</button>
-</div>
+            <div class="field">
+              <label for="homeAway">Home/Away *</label>
+              <select id="homeAway" class="input" required>
+                <option value="">Select…</option>
+                <option value="Home">Home</option>
+                <option value="Away">Away</option>
+              </select>
+              <small class="error" id="homeAwayErr"></small>
+            </div>
 
-</div>
+            <div class="field">
+              <label for="week">Week *</label>
+              <input id="week" class="input" type="number" min="1" max="20" required placeholder="1" />
+              <small class="error" id="weekErr"></small>
+            </div>
 
-<div id="statsView" class="hidden">
-<h2>Statistics</h2>
-<div id="statsCards"></div>
-</div>
+            <div class="field">
+              <label for="pointsFor">Points Scored (PF) *</label>
+              <input id="pointsFor" class="input" type="number" min="0" max="100" required placeholder="34" />
+              <small class="error" id="pointsForErr"></small>
+            </div>
 
-<script src="app.js"></script>
+            <div class="field">
+              <label for="pointsAgainst">Points Allowed (PA) *</label>
+              <input id="pointsAgainst" class="input" type="number" min="0" max="100" required placeholder="24" />
+              <small class="error" id="pointsAgainstErr"></small>
+            </div>
+
+            <div class="field">
+              <label for="result">Result *</label>
+              <select id="result" class="input" required>
+                <option value="">Select…</option>
+                <option value="W">Win (W)</option>
+                <option value="L">Loss (L)</option>
+              </select>
+              <small class="error" id="resultErr"></small>
+            </div>
+          </div>
+
+          <div class="actions">
+            <button type="submit" class="btn btn-primary" id="saveBtn">Save Game</button>
+            <button type="button" class="btn btn-ghost" id="cancelBtn">Cancel</button>
+          </div>
+
+          <div id="formMsg" class="msg" role="status" aria-live="polite"></div>
+        </form>
+      </div>
+    </section>
+
+    <!-- STATS VIEW -->
+    <section id="statsView" class="view">
+      <div class="card">
+        <div class="card-header">
+          <h2>Stats</h2>
+          <p class="muted">Pulled from server JSON.</p>
+        </div>
+
+        <div class="stats-grid">
+          <div class="stat">
+            <div class="stat-label">Total Games</div>
+            <div class="stat-value" id="statTotalGames">0</div>
+          </div>
+
+          <div class="stat">
+            <div class="stat-label">Wins / Losses</div>
+            <div class="stat-value" id="statWL">0 / 0</div>
+          </div>
+
+          <div class="stat">
+            <div class="stat-label">Average PF</div>
+            <div class="stat-value" id="statAvgPF">0.0</div>
+          </div>
+
+          <div class="stat">
+            <div class="stat-label">Highest PF Game</div>
+            <div class="stat-value" id="statHighPF">—</div>
+            <div class="muted" id="statHighPFDetail"></div>
+          </div>
+        </div>
+
+        <div id="statsMsg" class="msg" role="status" aria-live="polite"></div>
+      </div>
+    </section>
+  </main>
+
+  <script src="app.js"></script>
 </body>
 </html>
