--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div>
       <h1>🏈 College Football Game Tracker</h1>
-      <p class="subtitle">Cloud Collection Manager (Client/Server + JSON)</p>
+      <p class="subtitle">Cloud Collection Manager (Render)</p>
     </div>
   </header>
 
